first third of 2010

--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -40,11 +40,11 @@ old", but where exactly did it happen?
 
 2010s Stats/Favorites
 ---------------------
-*Section started*: 12 Aug 2021
+*Section started*: 13 Aug 2021
 
 *Section complete*: TBD
 
-*Latest update*: 29 Oct 2021
+*Latest update*: 30 Oct 2021
 
 *Total Albums*: 179
 
@@ -79,6 +79,182 @@ electronic album:
   title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
   clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
   allowfullscreen></iframe>
+
+2010
+----
+I knew going in that this one was going to take a while. Just staging the
+below photograph took about an hour. I listened to more new music in 2010 than
+ever will again in any single year. This is the last year of doing things the
+old way (without Spotify) so I had to keep notes on what I was listening to,
+instead of making a playlist to keep track. Thanks to these notes, I know that I
+listened to (and rated!) 96 records in 2010. All 7 records I considered five
+stars out of five are on the list below, but 5(!) of the records that I gave 4.5
+stars are no longer are among my favorites:
+
+- *I Heart California* by **Admiral Radley** - I gave this more credit than it
+  deserved because I liked **Grandaddy** so much.
+
+- *Avi Buffalo* by **Avi Buffalo** - I'm horrified by the accusations against
+  the leader of this band, and can't bring myself to listen to them anymore.
+
+- *Crazy for You* by **Best Coast** - They were so disappointing live, I have
+  never been able to see their music the same way.
+
+- *Wilderness Heart* by **Black Mountain** - Too safe and derivative for me now.
+
+- *Epic* by **Sharon Van Etten** - Just sounds so boring to me now.
+
+This was my peak year of listening
+for a range of reasons. First, the indie music of the day was very much aligned
+with my tastes. Second, I had just moved to a new town (Rochester, NY) where I
+could see more live music, and spent quite a bit of time alone to indulge in my
+solitary hobbies like collecting music. Finally, I had mastered the old ways of
+discovering new artists, tracking down a way to get a taste, and acquiring the
+things I wanted to hear more of. It was easy and often inexpensive to get
+digital copies of pretty much anything, and I did. I'm also convinced that
+Spotify (released in the following year) through infinite choice is somehow
+making me less interested in finding new music. Or maybe I'm just getting old.
+
+This was also the last year that I bought CDs as a primary means of consuming
+music. At this point I recognized that the CDs were just a vehicle for ripping
+MP3s and had no additional value as a medium. I started out the year buying CDs,
+but stopped a few months in. I have since nearly re-bought nearly all my
+favorites on vinyl, a format that is an experience unto itself. From here on out
+you will still see a few CDs but they are all New Amsterdam label contemporary
+classical releases that aren't on vinyl, and in many cases cannot be streamed.
+
+Finally, this was the year the seeds of this project were begun. I had been
+making lists of my favorite albums for several years by the time 2010 came
+around. I decided to make a list of my favorite albums from the decade that had
+just ended, and after commencing the project started making new discoveries of
+new albums, and seeing old albums in new ways. The project expanded and got more
+complicated. Eleven years later, here we are.
+
+.. image:: images/2010.jpg
+  :width: 900
+  :alt: My favorite albums from 2010
+
+.. raw:: html
+  
+  <iframe 
+  src="https://open.spotify.com/embed/playlist/3xGqm4eEtQK2Lz36k6scpv?theme=0" 
+  width="100%" height="380" frameBorder="0" allowfullscreen="" allow="autoplay; 
+  clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+
+- *Travelers In Space and Time* - **The Apples in Stereo** - I seem to keep
+  forgetting how good the last two records by this band are. I definitely
+  rediscovered this one while compiling this list. Everyone seems to hear the
+  80s **ELO** influence here, but I also still hear a nice backbone of the psych
+  and bubblegum that runs through their whole catalog. We also get a great
+  contribution from Bill Doss in "No Vacation" which would be his last great
+  track for Elephant 6 before he passed away way too young. [*Memory*: It still
+  seems kind of crazy to me that such a big act played Bugjar on this tour, and
+  I was glad to walk down the street to attend]
+
+- *The Suburbs* by **The Arcade Fire** - The lead up to the release of this
+  record is almost as memorable as the article itself. I remember studying the
+  lead singles trying to imagine what the concept double record might sound
+  like. They were the biggest band in indie and I was one of the millions who
+  couldn't wait to see what they came up with next. There was a bit of a
+  backlash against this record when it came out, mostly because of how much
+  mainstream attention it was getting. I think over time the profile of this
+  recording has landed right where it belongs, acknowledged as one of the most
+  important albums of its era. [*Memory*: I remember hearing a pre-release
+  broadcast of "Sprawl II" on WITR when I was driving through McDonalds for
+  breakfast. I was so into it I had to pull my car over and park to listen.]
+
+- *Before Today* by **Arial Pink** - Not as consistent as the records that would
+  follow, but this is where things would finally come into focus enough to work
+  for me. The tracks "Fright Night" and "Round and Round" are outstanding, and
+  rest of the material does just enough to make this a favorite album.
+  [*Memory*: The first time I ever listened to this record I was on a
+  flight for a work trip to Brazil. It was a stressful journey and I had to turn
+  off this music which was making me feel more uncomfortable.]
+
+- *Teen Dream* by **Beach House** - There are some very classic records this
+  year! I was already very on board with this band when they released this
+  breakthrough album. It was a huge departure with way more brightness and pop.
+  I saw them twice on this album cycle. It was quite the experience to see
+  thousands of people shouting the lyrics to "Take Care" at the Pitchfork Music
+  Festival, when I thought back to the band I saw play to a couple dozen people
+  at a basement bar in London. [*Memory*: This album came with a DVD of very
+  arty, mostly disturbing videos for each song. They are so memorable, it is
+  hard to hear the songs without picturing these videos.]
+
+- *Write About Love* by **Belle & Sebastian** - This is the album where Sarah
+  Martin's vocal contributions started to come to the foreground. "I Didn't See
+  It Coming" is one of my favorite latter day B&S songs. This is also where things
+  started to slide downhill a bit from their second career high. Still an
+  excellent indie pop record. [*Memory*: I remember that I barely realized this
+  came out at the time. This was kind of shocking to miss a release from one of
+  my all time favorites, but that is how much great music there was at the
+  time.]
+  
+- *The Besnard Lakes are the Roaring Night* by **The Besnard Lakes** - I always
+  have a hard time picking my favorite by this husband/wife band. I think it
+  might be this one. They master the combination of post-rock atmospherics,
+  dream pop and guitar based alt rock. I think it is the guitar work that really
+  pushes this one over the top. "And This Is What We Call Progress" might be the
+  best encapsulation of what these guys do so well.
+
+- *Television Landscape* by **William Brittelle** - Thank you eMusic for
+  pointing out this record, which would not only introduce me to one of my all
+  time favs, but get me up to speed with New Amsterdam records. This isn't in
+  the "indie classical" (lol) territory that was typical for NewAm and is more
+  of an art rock record. A fuzzy, somewhat psychedelic concept album that tells
+  the story of someone going in and out of sleep watching late night tv. The
+  Miami Vice themed "Sheena Easton" is one of my all time favorite songs.
+  [*Memory*: There were some truly awful lipsynced video performances on YouTube
+  of this record back in the day. I kind of wish they still existed. They really
+  fit the vibe of this record somehow.]
+
+- *Swim* by **Caribou** - All of a sudden Dan Snaith was making music that was
+  somewhat dance-able. I don't think this was actually intended for the club,
+  but the beats are there. Very much still album oriented, art-electronic, the
+  connections to dance music made this much more accessible to the indie kids.
+  That said it is still the smart kind of electronic music I love as well.
+  [*Memory*: The beats and pace of this album made it a workout playlist
+  favorite of the day. Listening to this brings up strong memories of the gym in
+  my office basement.]
+
+- *Crystal Castles II* by **Crystal Castles** - This is some truly obnoxious
+  electronic music that I have to be in the right mood for. The slight bit of
+  goth they mixed into their formula is what made me enjoy this record more than
+  their other work. I really have to be in the right mood for this. [*Memory*:
+  It is hard to think of this band without also remembering hipster runoff]
+
+- *Halcyon Digest* by *Deerhunter* - I see the career of this band like a
+  projector being brought into focus. The earlier records got progressively less
+  fuzzy and you could see a wonderful image taking shape. That picture is
+  perfectly formed here. The wonderful pop hooks bring everything together
+  perfectly. For the next record, the dial was turned too far. [*Memory*: I tend
+  to associate this band with Bradford Cox, but seeing them perform live made me
+  realize how important Lockett Pundt is, especially to this record.]
+
+- *Bang Goes the Knighthood* by **The Divine Comedy** - By far the most recent
+  edition to my list for this year, I'm not sure why I didn't listen to this at
+  the time. Neil Hannon has always been making the kind of chamber indie-pop
+  that I love, but I only discovered his catalog in the last few years. I do
+  remember eMusic featuring this heavily when it came out, but that cover just
+  didn't do it for me. A solid record like always from this guy, with two of his
+  best tracks in "Assume the Perpendicular" and "The Lost Art of Conversation".
+  [*Memory*: For years I had avoided this era of the Divine Comedy catalog until
+  the vinyl reissues in 2020. Why I have no idea, this is great.]
+
+- *I Will Be* by **Dum Dum Girls** - Being derivative can be a compelling art
+  form, and I don't mean that derisively. Kristen Gundred has made a great body
+  of work by imitating and interpreting the sounds of the past. Here we get some
+  great old fashioned garage rock with a touch of surf rock drumming. It is very
+  much the sound of the past and of 2010. "Bhang Bhang, I'm a Burnout" is a killer
+  single. [*Memory*: Gundred assembled a very solid band to interpret her home
+  recordings live. They were very memorable for their sound and image. I managed
+  to see them open for other acts on three occasions. They toured a lot.]
+
+- *Skit I Allt* by **Dungen** - A much lighter take on their psychedelic sounds.
+  It's almost like they saw all the english language imitators like **Tame
+  Impala* and decided to do something a bit different. It worked out very well.
+  [*Memory*: Seeing them at Mohawk Place in Buffalo was a fantastic show. It
+  also made it clear how talented this band is as instrumentalists.]
 
 2011
 ----
