--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -88,7 +88,7 @@ ever will again in any single year. This is the last year of doing things the
 old way (without Spotify) so I had to keep notes on what I was listening to,
 instead of making a playlist to keep track. Thanks to these notes, I know that I
 listened to (and rated!) 96 records in 2010. All 7 records I considered five
-stars out of five are on the list below, but 5(!) of the records that I gave 4.5
+stars out of five are on the list below, but 4(!) of the records that I gave 4.5
 stars are no longer are among my favorites:
 
 - *I Heart California* by **Admiral Radley** - I gave this more credit than it
@@ -96,9 +96,6 @@ stars are no longer are among my favorites:
 
 - *Avi Buffalo* by **Avi Buffalo** - I'm horrified by the accusations against
   the leader of this band, and can't bring myself to listen to them anymore.
-
-- *Crazy for You* by **Best Coast** - They were so disappointing live, I have
-  never been able to see their music the same way.
 
 - *Wilderness Heart* by **Black Mountain** - Too safe and derivative for me now.
 
@@ -197,6 +194,10 @@ complicated. Eleven years later, here we are.
   pushes this one over the top. "And This Is What We Call Progress" might be the
   best encapsulation of what these guys do so well.
 
+- *Crazy for You* by **Best Coast** - The best of the surf rock revival records,
+  this holds up pretty well a decade later. [*Memory*: They were so
+  disappointing live, I have never been able to see their music the same way.]
+
 - *Television Landscape* by **William Brittelle** - Thank you eMusic for
   pointing out this record, which would not only introduce me to one of my all
   time favs, but get me up to speed with New Amsterdam records. This isn't in
@@ -252,9 +253,142 @@ complicated. Eleven years later, here we are.
 
 - *Skit I Allt* by **Dungen** - A much lighter take on their psychedelic sounds.
   It's almost like they saw all the english language imitators like **Tame
-  Impala* and decided to do something a bit different. It worked out very well.
+  Impala** and decided to do something a bit different. It worked out very well.
   [*Memory*: Seeing them at Mohawk Place in Buffalo was a fantastic show. It
   also made it clear how talented this band is as instrumentalists.]
+
+- *Fang Island* by **Fang Island** - A completely unique record that feels like
+  metal combined with church music. Such a happy, uplifting record. No one has
+  ever made anything close to this again, even Fang Island. [*Memory*: These
+  guys played a great opening set for **Joy Formidable** at the old Club at
+  Water Street. One of my favorite live shows ever.]
+
+- *Opus Eponymous* by **Ghost** - More directly connected to the metal of the
+  past (particularly Blue Oyster Cult) than the music that would come later. The
+  whole concept of the band is fully aligned here though. The over the top
+  Satanism, the focus on melody and atmospherics are all here. The songs aren't
+  as consistent as the later records, but "Ritual" is still the best summary of
+  what these guys do well. [*Memory*: I watched the video of "Ritual" dozens of
+  times on YouTube and was fascinated by the image that they projected]
+
+- *Broken Dreams Club* by **Girls** - A much smaller work in both scope and
+  sound than what would come before and after. This little EP is also an
+  essential part of this bands very limited output. Much more directly
+  reverential of the early 60s pop music that was a significant part of their
+  debut album. "Broken Dreams Club" is a fantastic old fashioned torch song.
+  [*Memory*: I saw them play at Pitchfork 2010 right after this was released.
+  I'm really glad I was able to catch them during their very short time of
+  existence.]
+
+- *Pigeons* by **Here We Go Magic** - This is such a wonderfully strange
+  recording. I really liked the five person incarnation of this band. Everything
+  is so fuzzy and warm, weird and beautiful. The lead singer of this band is
+  great, but the band was never the same after the other members were ditched,
+  especially bassist/producer Jen Turner. [*Memory*: I saw them open for Dr. Dog
+  at Town Ballroom in Buffalo, and it was a great show. A very high Jen Turner
+  decided that she wanted to feel the fabric my shirt was made out of. It made
+  me and her bandmates uncomfortable, and they led her outside.]
+
+- *Momo* by **Hooray for Earth** - The start for another one of those bands that
+  had a brief, but productive run in the 2010s. This is a little more lowfi than
+  what would come later, but those big layered guitars and synths are in place,
+  with the pretty lead vocals. One of the more underrated things they can do
+  are those weird, avant garde guitar solos they occasionally break out, like in
+  "Comfortable, Comparable". [*Memory*: These guys were the first to play at a
+  memorable three act show at German House in late 2010. It wasn't great
+  actually, as it seemed like they were struggling to represent this kind of
+  music in the live setting.]
+
+- *One Life Stand* by **Hot Chip** - The second album by the more mature version
+  of this act is another winner. Some really fantastic pop songs with a techno
+  backbeat. [*Memory*: I like the title song to this album so much I decided
+  that I only needed a promotional 45 of that track by itself. It also confused
+  me when I took the picture above and a grabbed the wrong album for the
+  picture, oops.]
+
+- *Love Remains* by **How to Dress Well** - In general I didn't love the weird
+  minimalist elecro-R&B stuff that Pitchfork was pushing back then. I do like
+  this though. [*Memory*: I saw them play some of the tracks off this record
+  with a string quartet at Pitchfork 2011. I know there was a recording of this,
+  I wish it was on Spotify, as it is the definitive recording of songs like
+  "Suicide Dream 2".]
+
+- *Penelope* by **Sarah Kirkland Snider** - This was the high water mark for the
+  "indie classical" thing that Pitchfork was trying to make happen, and even if
+  they won't admit it now, so were the artists that got lumped in with the fake
+  genre. It is amazing how many of the things under that umbrella involved Shara
+  Worden, and here she is. Described accurately, is a stunning collection of art
+  pop written and performed by classically trained musicians. [*Memory*: I
+  remember trying to decide if I needed a CD copy of this.]
+
+- *The Longing* by **Kordan** - The best part of my short time writing for the
+  music blog was getting access to lots of free music that bands would send in.
+  This was the best record I found that way. A really interesting combination of
+  eletro-indie and classic guitar based goth, this is right up my alley. This
+  never really got any mainstream press. Makes me wonder how many other great
+  records are out there and never find an audience. [*Memory*: I was so glad to
+  find a note about this record in the album list I compiled at the end of 2010.
+  Without this I probably would have never heard it again. How many things like
+  this have I forgotten?] 
+
+- *Gorilla Manor* by **Local Natives** - I was really surprised at the time that
+  the indie kids were going for such straight ahead rock music. This is the
+  basics of pop/rock done to perfection, with some particularly great vocal
+  harmonies. "Camera Talk" is one of my all time favorite songs. [*Memory*: At
+  Pitchfork 2010 these guys were the hot band of the moment. I'll never forget
+  the kid towards the front of the stage who held up his vinyl copy of this
+  record that he thrust towards the stage in rhythm to the music. It was a great
+  show.]
+
+- *Congratulations* by **MGMT** - I liked the first record, but it didn't
+  prepare me for this. The fusion of classic psychedelic sounds and the more
+  modern electro-indie was a revelation. "Flash Delirium" does so many different
+  things really well, and is an all time favorite. [*Memory*: This album got a
+  mixed reception at release, as a result of how different it was. I always had
+  a sense its reputation would grow over time, and this turned out to be true.]
+
+- *The Archandroid* by **Janelle Monae** - A stunning genre study that covers
+  everything from the Minneapolis sound to Bond themes. I really miss this and
+  fear that she is never going to make music like this again. [*Memory*: I
+  became aware of this record thanks to the "Sound Opinions" show that used to
+  play on WRUR back in the day.]
+
+- *High Violet* by **The National** - Matt Berninger's voice is so beautifully
+  weathered on this record. I also feel like this catches the band at their
+  creative peak before they (particularly the Dessner brothers) became
+  distracted by side projects. A stunning work, and one of the finest indie
+  records made by this generation. [*Memory*: I saw them perform in Cincinnati
+  as a part of the MusicNow festival in 2011. They performed "Vanderlyle Crybaby
+  Geeks" using only natural concert hall acoustics. It didn't totally work, but
+  it was a memorable moment no less.]
+
+- *False Priest* by **Of Montreal** - The last album I love, from one of my
+  favorite artists of all time. The albums after this have their moments, but
+  this is the last one that I like as a whole. This is another "low budget
+  Prince" record, with increasingly edgy and intellectual lyrics. This whole
+  album feels like Kevin Barnes is bumping up against his limitations as a
+  songwriter and vocalist, but it never stops being compelling. Some great guest
+  spots by Janelle Monae and Solange. [*Memory*: My vinyl pre-order of this
+  record came with a tee-shirt that is still a star player in my wardrobe]
+
+- *Sweet, Light, Crude* by **Newspeak** - Classical music nerds start a rock
+  band and accidentally rediscover prog without realizing it. I really miss the
+  spirit of the early NewAm releases. [*Memory*: There used to be a great live
+  performance of this on YouTube. I feel like the NewAm folks are embarrassed by
+  the early days of their scene, which in my opinion was the best part.]
+
+- *Heartland* by **Owen Pallett** - Afraid of being sued, he starts releasing
+  the music of the **Final Fantasy** project under his own name. A huge step up
+  in production quality and instrumentation, with the same quirky bipolar 
+  songwriting of the first two records. A fine transitionary work that is
+  setting up the all-time classic that would follow. [*Memory*: My vinyl copy of
+  this record has a single large pop in the first track. I listened to it so
+  much, I can hear it when I stream the track on Spotify.]
+
+- *Clinging to a Scheme* by **The Radio Dept.** - Such a pleasant indie-pop
+  record. This is the kind of sincere, serene music that only Scandinavian bands
+  can make for some reason. [*Memory*: This music was unexpectedly compelling
+  live, as I discovered at the Pitchfork festival in 2011].
 
 2011
 ----
