--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -42,11 +42,11 @@ old", but where exactly did it happen?
 ---------------------
 *Section started*: 13 Aug 2021
 
-*Section complete*: TBD
+*Section complete*: 7 Nov 2021
 
-*Latest update*: 30 Oct 2021
+*Latest update*: 7 Nov 2021
 
-*Total Albums*: 179
+*Total Albums*: 178
 
 *Top Artists*:
 
@@ -148,7 +148,8 @@ complicated. Eleven years later, here we are.
   seems kind of crazy to me that such a big act played Bugjar on this tour, and
   I was glad to walk down the street to attend]
 
-- *The Suburbs* by **The Arcade Fire** - The lead up to the release of this
+- *The Suburbs* by **The Arcade Fire** - [**2010 FAVORITE**] The lead up to the 
+  release of this
   record is almost as memorable as the article itself. I remember studying the
   lead singles trying to imagine what the concept double record might sound
   like. They were the biggest band in indie and I was one of the millions who
@@ -390,6 +391,116 @@ complicated. Eleven years later, here we are.
   can make for some reason. [*Memory*: This music was unexpectedly compelling
   live, as I discovered at the Pitchfork festival in 2011].
 
+- *Senior* by **Royksopp** - It is very strange that they went out on this moody
+  ambient masterpiece, but I'm not going to complain. Not a whiff of the pop
+  songcraft that ran through the first three records, but still a great
+  collection of electronic music that uses their fundamental sound in a very
+  different way. [*Memory*: I listed to this on repeat during a flight to Brazil
+  in December of 2010. It now is the sole record on a spotify playlist called
+  "Airplane Sleepytime".]
+
+- *All Delighted People* by **Sufjan Stevens** - I used to see this as the last
+  stand of the Sufjan who made the "States Project" records, but today I hear it
+  more as the analog flip side to *Age of Adz*. It is the last hurrah for the
+  amazing big band that toured *Illinois* though. I increasingly wonder if my
+  favorite era of his music will end up being the span between *The BQE* and
+  *Age of Adz*. [*Memory*: I bought a used copy of the now departed Spiral
+  Scratch records in Buffalo. It was before the value of indie vinyl blew up and
+  I couldn't have paid more than 10 bucks for this amazing record.]
+
+- *The Age of Adz* by **Sufjan Stevens** - He had made some radical changes in
+  the past, but none as big as the shift to glitchy electronic music here. A
+  stunning record with a level of invention that he has never reached again.
+  [*Memory*: I loved this whole thing immediately, with the exception of
+  "Impossible Soul". It took me a long time to appreciate all the over the top
+  auto-tune, but I now see it to be some of his finest work.]
+
+- *Wild Smile* by **Suckers** - Fun music that doesn't take itself seriously at
+  all. They were refreshing in a very serious time in indie rock. It is almost
+  like the comedy version of the way more popular **Local Natives**. I wish
+  these guys got more attention in their short career. [*Memory*: This is one of
+  the last bands that I discovered from Greg at City Lights records in State
+  College, PA. He wanted me to hear them since they opened for MGMT and
+  Menomena, to of my favorite bands at the time.]
+
+- *Causers of This* by **Toro y Moi** - At the time this was considered one of
+  the more difficult chillwave records. We now think differently, and realize
+  that chillwave was more of an aesthetic that was applied to a range of musical
+  styles, in this case experimental electronic music. I loved this record back
+  then, I may love it a bit more 11 years later when I write this. Wholely
+  unique, I'll never get tired of this [*Memory*: This was one of the last CDs I
+  ever went down to a record store to purchase as a primary means of
+  consumption. It was obscure enough to not be available on eMusic, but the
+  great "alternative" record store down the street (Lakeshore Record Exchange)
+  had it out on the featured rack in the electronic area.]
+
+- *Forget* by **Twin Shadow** - At the time, like many other music fans, I
+  tended to lump many things into the "chillwave" bucket that were really
+  something else entirely. This album is a rare example of something that I
+  didn't appreciate as chillwave that was very much inline with the conventions
+  of the aesthetic. Maybe the quality of songwriting felt to high for that
+  scene. I'm always in the mood for this amazing record. [*Memory*: Every now
+  and then Carles from Hipster Runnoff would make a genuine post in his own
+  voice about a artist he actually liked. His post of the song "Tyrant
+  Destroyed" is how I found one of my favorite albums.]
+
+- *Maniac Meat* by **TOBACCO** - Some very experimental electronic music. Of all
+  the releases by these guys under different names, this is for some reason my
+  favorite. It is almost like a disturbed version of Kraftwerk. [*Memory*: I
+  still like this. But I feel like the me who could discover music like this was
+  a different person.]
+
+- *Color Your Life* by **(Mr) Twin Sister** - "All Around and Away We Go" is a
+  remarkable pop single. Everyone else was making synthpop and these guys were
+  skipping right to late 80s sophista-pop. Of all the bands from that time I
+  find it interesting that this group is still alive and very active. [*Memory*:
+  I saw them play at two consecutive Pitchfork after shows. They opened for Bear
+  in Heaven in 2010 and were the headliners the next year. Great live band.]
+
+- *Cathedral City* by **Victoire** - Of all the young classically train
+  musicians who got lumped into the fake "indie classical" thing, Missy Mazzoli
+  is my favorite. Her band Victoire almost justifies the existence of the genre.
+  A rock band who plays like a chamber ensemble, this is some super compelling
+  stuff. Mazzoli's music is so interesting. Something always seems a little off
+  in just the perfect way. [*Memory*: I feel so lucky that I got to see them
+  perform most of this album at Crossing Brooklyn Ferry in 2012. That is a
+  performance I will always treasure.]
+
+- *Libson* by **The Walkmen** - This is their record that I tend to
+  underestimate until I put it on. It is probably the most subtle of their
+  fantastic catalog, but also one of the finest. A more upbeat, surf rock
+  influenced affair than the prior release, but those amazing horns remain.
+  [*Memory*: I saw the band a few times live, but I think the best performance
+  was at the Town Ballroom in 2011 on this tour.] 
+
+- *Life of Leisure* by **Washed Out** - The use of "Feel It ALl Around" as the theme
+  song to the show "Portlandia" made this the definitive article of 2010s
+  hipster culture. I think in retrospect it is also the best summation of the
+  "chillwave" aesthetic. [*Memory*: I don't know that anything makes me more
+  nostalgic for my early 30s more than the song "Get Up"]
+
+- *Gemini* by **Wild Nothing** - I wish more bands had decided to operate in the
+  space these guys explored. Combining the chillwave aesthetic with the
+  conventions of jangle pop is very compelling. [*Memory*: You wouldn't think it
+  from the album, but this is a great live band. I was blown away by how good
+  they were when I saw them at NxNE 2011.]
+
+- *Public Strain* by **Women** - One of the most unique bands that every
+  existed, their second and final album would be their definitive statement.
+  There is so much going on here, ambient electronic soundscapes, angular
+  post-punk, straight ahead pop hooks, and a few things I can't really identify.
+  A difficult but rewarding listen. [*Memory*: This was one of the last great
+  records I remember discovering during one of the best years in music I can
+  remember.]
+
+- *Odd Blood* by **Yeasayer** - This album was a bit of a shock when it arrived.
+  Their debut had given some "serious music" vibes, and all of a sudden they
+  wanted to party. Another one of those albums that seems way more "chillwave"
+  in retrospect. That cover seems to be anticipating the vapor wave aesthetic
+  that would develop in 2011! [*Memory*: Hearing the rhythms of "Ambling Alp"
+  echoing through Union Park might be my most enduring memory of my various 
+  Pitchfork Music Festival experiences.]
+
 2011
 ----
 I bought a house in 2011, and all of a sudden I had way more room for records.
@@ -459,8 +570,8 @@ direct connections to that decade, but it all sure sounds like 2011.
 
 - *Zonoscope* by **Cut/Copy** - Much of the synthpop being made in 2011 was
   alluding to an imagined, but non-existent alternative version of the 1980s.
-  Not these guys, they would have fit right in that decade. One of best "New
-  Wave Guy" voices of all time. I've always wondered if their name was an
+  Not these guys, they would have fit right in that decade. One of best "new
+  wave guy" voices of all time. I've always wondered if their name was an
   acknowledgement of how much this music borrows from the past. Who cares, its
   like New Order are still around making great new music. [*Memory*: Jumping up
   and down to this stuff at Pitchfork 2011 with all the indie kids]
@@ -518,7 +629,8 @@ direct connections to that decade, but it all sure sounds like 2011.
   Turner. It was a short but brilliant run by the five piece version. [*Memory*:
   Few albums have disappointed me more than the one that came after this one.]
 
-- *True Loves* by **Hooray for Earth** - It took a while for them to release
+- *True Loves* by **Hooray for Earth** - [**2011 FAVORITE**] It took a while for 
+  them to release
   their first full length, but it was worth the wait. This stood out during a
   time when most indie rock was intentionally lofi or otherwise rough around the
   edges. The album is textured and slickly produced. There is a pleasant warmth
@@ -806,7 +918,8 @@ am savoring the process of revisiting the past.
   remember listening to this album repeatedly on a road trip back to the SE
   Pennsylvania area in late '12]
 
-- *A Church that Fits Our Needs* by **Lost In the Trees** - There were a couple
+- *A Church that Fits Our Needs* by **Lost In the Trees** - [*2012 FAVORITE*] 
+  There were a couple
   bands that got a notable boost from the NPR program "All Songs Considered" in
   the early 2010s, and that included this act. I doubt they would have had a
   chance to make such an ambitious, sprawling record without the spotlight from
@@ -978,7 +1091,8 @@ artist. This is the end of my youth.
   vibrant McCarney seemed all of a sudden when this record came out. We were
   only a few years from that horrid covers record.]
 
-- *The Electric Lady* by **Janelle Monae** - It's a huge bummer that we will never
+- *The Electric Lady* by **Janelle Monae** - [**2013 FAVORITE**] It's a huge
+  bummer that we will never
   get a proper end to the Cindy Mayweather epic. Monae has clearly gone in a
   different (mildly disappointing) direction. This record does an amazing job
   balancing modern pop idioms with dozens of ideas from the past. I really
@@ -1118,7 +1232,8 @@ records.
   Shara Nova. [*Memory*: I saw Shara for the last time on this tour. It was a
   fantastic show in a small venue in Toronto]
 
-- *In Conflict* by **Owen Pallet** - The record where he perfected the formula
+- *In Conflict* by **Owen Pallet** - [**2014 FAVORITE**] The record where he 
+  perfected the formula
   that was started with the **Final Fantasy** records. While the music is
   feeling more refined and perfected than ever before, the lyrics are a
   stunningly transparent account of someone who is really struggling. 
@@ -1172,7 +1287,8 @@ as several of my favorites released their best work.
   wasn't perfect by any means, but it was an important step in a different
   direction that she still is on as of 2021.
 
-- *Meliora* by **Ghost** - This is the record where the formula came together in
+- *Meliora* by **Ghost** - [**2015 FAVORITE**] This is the record where the
+  formula came together in
   a big way. It is amazing how something so satirical can also be such seriously
   great music. "He Is" is such a beautiful and stunningly produced mockery of
   christian rock. [*Memory*: One of the most fun shows I have ever been to in my
@@ -1322,7 +1438,8 @@ George Michael, Prince, and David Bowie.
   these underrated musicians can do. [*Memory*: The mixed emotions of a great
   new band, but the loss of two that were a bit better]
 
-- *blond* by **Frank Ocean** - A stunning concept record by one of the best
+- *blond* by **Frank Ocean** - [**2016 FAVORITE**] A stunning concept record by 
+  one of the best
   artists working today. My vinyl copy of this record is an amazingly made
   bootleg, because the real thing is worth over 400 bucks these days. Ocean
   seems intent on only being so popular, almost choosing artistic relevance 
@@ -1423,7 +1540,8 @@ comprised of artists from the early century indie boom that I had been following
   warmth. [*Memory*: I've listened to "Legend of the Wild Horse" so many times,
   I know I'll never tire of it]
   
-- *Melodrama* by **Lorde** - This album is amazing, but it fills me with
+- *Melodrama* by **Lorde** - [**2017 FAVORITE**] This album is amazing, but it 
+  fills me with
   anxiety. I greatly fear the machinations of mainstream pop music will get
   their hooks into Lorde and turn her into a Billie Eilish style commercial
   interest instead of her far more interesting authentic self. This album put
@@ -1539,7 +1657,8 @@ a bit out of touch with popular music.
   Feeling happy that this existed, but sad that it was a sign that two of my
   favorites were never coming back]
 
-- *Little Dark Age* by **MGMT** - After their highly disappointing, self titled
+- *Little Dark Age* by **MGMT** - [**2018 FAVORITE**] After their highly 
+  disappointing, self titled
   third album, I had given up on these guys. I can usually sense when a band has
   lost the sound that made me enjoy them in the first place. When they came back
   with this strong release out of nowhere it was the surprise of the decade for
@@ -1605,7 +1724,8 @@ thinking about the project I am working on here.
   width="100%" height="380" frameBorder="0" allowtransparency="true" 
   allow="encrypted-media"></iframe>
 
-- *Norman Fucking Rockwell* by **Lana Del Rey** - This was the only album that I
+- *Norman Fucking Rockwell* by **Lana Del Rey** - [**2019 FAVORITE**] This was 
+  the only album that I
   discovered and fully engaged with during the year of 2019. I like all of
   Lana's albums, but this one is stunning. The songwriting has gone to a new
   level, and she has really separated herself from her peers working in the the
