--- a/src/music/2020s.rst
+++ b/src/music/2020s.rst
@@ -48,11 +48,12 @@ albums by artists I already know well.
   that he can make music like this at his age and career state. [*Memory*: Hearing
   that this existed was welcome good news in one of the roughest periods of my life]
 
-- *Tomorrows I* by **Son Lux** - Another welcome distraction in the lost year was the
+- *Tomorrows I* by **Son Lux** - [**2020 FAVORITE**] Another welcome distraction
+  in the lost year was the
   three part epic by Ryan Lott and band. The albums play out more like films in
   a trilogy than a multi-movement musical piece. This one does a great job
   setting up the themes and concepts of the whole work. [*Memory*: This was
-  released right after I moved back to Rochester]
+  released right after I moved back to Rochester] 
 
 - *Tomorrows II* by **Son Lux** - If part one was A New Hope, this definitely is
   Empire Strikes Back. Everything is shaken up and broken apart. The reviews I
