2021 added, with some 2022

--- a/src/music/2010s.rst
+++ b/src/music/2010s.rst
@@ -44,9 +44,9 @@ old", but where exactly did it happen?
 
 *Section complete*: 7 Nov 2021
 
-*Latest update*: 7 Nov 2021
+*Latest update*: 16 June 2022
 
-*Total Albums*: 178
+*Total Albums*: 179
 
 *Top Artists*:
 
@@ -1020,6 +1020,13 @@ artist. This is the end of my youth.
   marketing push for this record was huge. I remember a high profile performance
   on SNL and a bunch of social media things. This was indie's peak.]
 
+- *AM* by **Arctic Monkeys** - This has the distinction of the first retroactive
+  addition to this project, and therefore in not in the picture above. I didn't
+  include it at first because this isn't a strong record throughout, but the
+  first few songs are incredible, especially "Do I wanna Know?". [*Memory*:
+  Another of the tentpoles of peak indie. The massive popularity of records like
+  this made me think the scene would last forever. It would last about another year]
+
 - *Until In Excess, Imperceptible UFO* by **The Besnard Lakes** - There are a lot 
   of husband/wife indie bands operating out of Canada. These guys are a hidden
   gem in the genre. I don't know why I stopped paying attention after this,
@@ -1732,7 +1739,7 @@ thinking about the project I am working on here.
   crowded female singer songwriter (with a large support team) space of our
   current era. "Venice Bitch" and "Hope is a Dangerous Thing for A Woman Like Me
   to Have, but I Have it" are her two finest songs so far. [*Memory*: All of a
-  sudden the world was on board with Lana, and feeling ahead of the times]
+  sudden the world was on board with Lana, and I'm feeling ahead of the times]
 
 - *Office Politics* by **The Divine Comedy** - No act played a bigger part in my
   late 2010s listening that Neil Hannon and company. I had largely stayed away
